--- a/src/templates/CONTRACTOR/editnew.html
+++ b/src/templates/CONTRACTOR/editnew.html
@@ -3,14 +3,10 @@
 {% block content %}
   <div class="row">
     <div class="col-md-12 m-auto">
-      <div class="container mt-5 pt-5">
+      <div class="container ">
     <form id="form1" name="form1" method="post" action="/edit_new_vacancy">
 
-        <div class="row">
-          <div class="col-md-6 m-auto">
-              <div class="container  pl-5">
-                  <h2 class="text-center font-weight-bold"> EDIT JOBS</h2>
-
+ 
               <div>
                     <div class="form-group ">
                           <label class="text-center font-weight-bold">JOB NAME</label>
@@ -29,9 +25,7 @@
               </div>
 
                       <button type="submit" class="btn btn-primary float-right">update</button>
-                  </form>
-              </div>
-          </div>
+          
       </form>
    </div>
 </div> </div>
