--- a/src/templates/admin/ViewContractor.html
+++ b/src/templates/admin/ViewContractor.html
@@ -4,8 +4,7 @@
 <div class="row">
   <div class="col-md-12 m-auto">
     <div class="container ">
-      <h2 class="text-center font-weight-bold " style="color: #632343;"> Contractors</h2>
-      <table class="table mt-5">
+      <table class="table ">
         <thead>
           <tr>
             <th scope="col">Name</th>
@@ -22,7 +21,7 @@
           <tr>
 
             <td>{{i[1]}} {{i[2]}}</td>
-            <td>{{i[4]}} {{i[5]}} {{i[6]}}</td>
+            <td><b>place</b> :   {{i[4]}} <br>  <b>post</b> :   {{i[5]}} <br> <b>pincode</b> :   {{i[6]}}</td>
             <td>{{i[7]}}</td>
             <td> {{i[8]}}</td>
             <td>{{i[3]}}</td>
