--- a/src/templates/user/ApplyJob.html
+++ b/src/templates/user/ApplyJob.html
@@ -5,9 +5,8 @@
   <div class="col-md-12 m-auto">
     <div class="container ">
 
-      <form id="form1" name="form1" method="post" action="/GetApplyjob">
+      <form id="form1" name="form1" method="post" action="/GetApplyjob" enctype="multipart/form-data">
 
-        <h2 class="text-center font-weight-bold " style="color: #632343;">Your Resume</h2>
         <div class="form-group">
           <br><br><br>
           <input type="file" class="form-control" required name="file">
