--- a/src/templates/user/WorkDeatail.html
+++ b/src/templates/user/WorkDeatail.html
@@ -4,12 +4,11 @@
 <div class="row">
   <div class="col-md-12 m-auto">
     <div class="container ">
-      <h2 class="text-center font-weight-bold " style="color: #632343;">Contractor Details</h2>
 
       <ul class="list-group mt-5 ">
 
         <li class="list-group-item"> <span class="text-center font-weight-bold" style="color: #632343;"> Name
-            : </span>  {{val[1]}} {{val[2]}} <br>Place : {{val[4]}}<br> PhoneNumber : {{val[7]}}</li>
+            : </span>  {{val[1]}} {{val[2]}} <br> <b>Place :</b>  {{val[4]}}<br><b>PhoneNumber :</b>  {{val[7]}}</li>
         <li class="list-group-item"><span class="text-center font-weight-bold" style="color: #632343;">Service
             : </span>{{val[8]}}</li>
         <li class="list-group-item"><span class="text-center font-weight-bold" style="color: #632343;">Skill &
@@ -25,9 +24,9 @@
       <ul class="list-group  mb-5 ">
 
         <li class="list-group-item"> <span class="text-center font-weight-bold" style="color: #632343;"> User Name
-            : </span>  {{i[1]}} {{i[2]}} <br> Place : {{i[3]}}  <br> PhoneNumber : {{i[6]}} </li>
+            : </span>  {{i[1]}} {{i[2]}} <br> <b>Place :</b> {{i[3]}}  <br> <b>PhoneNumber :</b> {{i[6]}} </li>
         <li class="list-group-item"><span class="text-center font-weight-bold" style="color: #632343;">FeedBack
-            : </span><br> Date : {{i[11]}} <br> Commets : {{i[9]}}</li>
+            : </span><br><b>Date :</b>  {{i[11]}} <br><b> Commets :</b> {{i[9]}}</li>
 
 
       </ul>
