--- a/src/templates/CONTRACTOR/VIEW JOB REQUEST.html
+++ b/src/templates/CONTRACTOR/VIEW JOB REQUEST.html
@@ -4,7 +4,6 @@
   <div class="row">
     <div class="col-md-12 m-auto">
       <div class="container ">
-        <h2 class="text-center font-weight-bold " style="color: #632343;">JOB REQUESTS </h2>
 
   <table class="table mt-5">
     <tr>
@@ -17,11 +16,17 @@
     </tr>
     {% for i in val %}
     <tr>
-      <td>{{i[1]}}{{i[2]}}<br>{{i[3]}}<br>{{i[6]}}</td>
-      <td>{{i[9]}} <br>{{i[10]}}</td>
+      <td>
+        <b>Name : </b>{{i[1]}}{{i[2]}}<br>
+        <b>Place : </b>{{i[3]}}<br>
+        <b>Phone Number : </b>{{i[6]}}
+      </td>
+
+      <td><b>Job Name : </b>{{i[9]}} <br>
+        <b>Qualification : </b>{{i[10]}}</td>
       <td>{{i[12]}}</td>
       <td>{{i[17]}}</td>
-      <td>{{i[19]}}</td>
+      <td><a href="{{ url_for('download', filename=i[19]) }}" class="btn btn-primary" >Job Resume</a> </td>
       <td><a href="/AcceptJobRequest?id={{i[14]}}" onclick="return confirm('Are you sure?')" class="btn btn-primary">Accept</a></td>
       <td><a href="/RejectJobRequest?id={{i[14]}}" onclick="return confirm('Are you sure?')" class="btn btn-danger">Reject</a></td>
 
