--- a/src/templates/CONTRACTOR/addnew.html
+++ b/src/templates/CONTRACTOR/addnew.html
@@ -2,37 +2,36 @@
 {% extends '/CONTRACTOR/layout.html' %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-md-12 m-auto">
-      <div class="container mt-5 pt-5">
+<div class="row">
+  <div class="col-md-12 m-auto">
+    <div class="container ">
 
-    <form id="form1" name="form1" method="post" action="/get_add_new">
+      <form id="form1" name="form1" method="post" action="/get_add_new">
 
-        <div class="row">
-          <div class="col-md-6 m-auto">
-              <div class="container  pl-5">
-                  <h2 class="text-center font-weight-bold">ADD NEW JOBS</h2>
-                
-                    <div class="form-group">
-                          <label for="exampleInputEmail1" class="font-weight-bold">JOB NAME</label>
-                          <input type="text" class="form-control"  name="textfield1"  required pattern="[A-Z a-z.]{3,25}" id="exampleInputEmail1" aria-describedby="emailHelp"
-                              placeholder="Enter job name">
-                      </div>
-           
-                      <div class="form-group">
-                          <label for="exampleInputPassword1" class="font-weight-bold">VACCANCY</label>
-                          <input type="text" class="form-control" name="textfield2" required id="exampleInputPassword1" placeholder="Enter Vacancy">
-                      </div>
-                      <div class="form-group">
-                        <label for="exampleInputPassword1" class="font-weight-bold">DETAILS</label>
-                        <input type="text" class="form-control" name="textfield3" required  id="exampleInputPassword1" placeholder="Enter details">
-                    </div>
-                      
-                      <button type="submit" class="btn btn-primary float-right">Submit</button>
-                  </form>
-              </div>
-          </div>
+
+
+        <div class="form-group">
+          <label for="exampleInputEmail1" class="font-weight-bold">JOB NAME</label>
+          <input type="text" class="form-control" name="textfield1" required pattern="[A-Z a-z.]{3,25}"
+            id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter job name">
+        </div>
+
+        <div class="form-group">
+          <label for="exampleInputPassword1" class="font-weight-bold">VACCANCY</label>
+          <input type="text" class="form-control" name="textfield2" required id="exampleInputPassword1"
+            placeholder="Enter Vacancy">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1" class="font-weight-bold">DETAILS</label>
+          <input type="text" class="form-control" name="textfield3" required id="exampleInputPassword1"
+            placeholder="Enter details">
+        </div>
+
+        <button type="submit" class="btn btn-primary float-right">Submit</button>
+
       </form>
-    </div></div></div>
-  
-      {% endblock %}
+    </div>
+  </div>
+</div>
+
+{% endblock %}
