--- a/src/templates/CONTRACTOR/layout.html
+++ b/src/templates/CONTRACTOR/layout.html
@@ -44,7 +44,7 @@
       <div class="container-fluid">
   
         <div id="logo" class="pull-left">
-          <h1><a href="#intro" class="scrollto">E contractt</a></h1>
+          <h1><a href="#intro" class="scrollto">E contract</a></h1>
           <!-- Uncomment below if you prefer to use an image logo -->
           <!-- <a href="#intro"><img src="../static/img/logo.png" alt="" title="" /></a>-->
         </div>
