--- a/src/templates/CONTRACTOR/view request.html
+++ b/src/templates/CONTRACTOR/view request.html
@@ -4,19 +4,18 @@
 <div class="row">
   <div class="col-md-12 m-auto">
     <div class="container ">
-      <h2 class="text-center font-weight-bold" style="color: #632343;">WORK REQUESTS</h2>
 
       <table class="table mt-5">
         <tr>
           <th scope="col">user Deatail</th>
-          <th scope="col">Work </th>
           <th scope="col">Date</th>
           <th scope="col"></th>
         </tr>
         {% for i in val%}
         <tr>
-          <td>{{i[1]}} {{i[2]}} <br> {{i[3]}} {{i[6]}}</td>
-          <td>{{i[11]}}</td>
+          <td><b>Name : </b>{{i[1]}} {{i[2]}} <br>
+            <b>Place : </b> {{i[3]}} <br>
+            <b>Phone Number :</b>{{i[6]}}</td>
           <td>{{i[12]}}</td>
           {% if i[13] == 'pending' %}
           
