--- a/src/templates/CONTRACTOR/view work.html
+++ b/src/templates/CONTRACTOR/view work.html
@@ -4,7 +4,6 @@
 <div class="row">
   <div class="col-md-12 m-auto">
     <div class="container ">
-      <h2 class="text-center font-weight-bold" style="color: #632343;">WORKS</h2>
 
       <table class="table mt-5">
         <tr>
@@ -15,13 +14,14 @@
         </tr>
         {% for i in val %}
         <tr>
-          <td>{{i[1]}} {{i[2]}} <br>{{i[3]}} </td>
+          <td><b>Name : </b>{{i[1]}} {{i[2]}} <br>
+            <b>Place : </b>{{i[3]}} </td>
           <td>{{i[10]}}</td>
-          <td><a href="{{ url_for('download', filename=i[11]) }}">{{i[11]}}</a></td>
+          <td><a href="{{ url_for('download', filename=i[11]) }}">Work File</a></td>
           <td>{{i[6]}}</td>
           <td>
-            <a href="{{ url_for('download', filename=i[11]) }}"><input type="submit" name="Submit" value="view"
-                class="btn btn-primary ml-5 " /></a>
+            <a href="{{ url_for('download', filename=i[11]) }}"
+                class="btn btn-primary ml-5 " >view</a>
           </td>
           {% if i[12] == 'pending' %}
           <td><a href="/Massege_view_work?id={{i[8]}}" class="btn btn-success">Accept</a></td>
