--- a/src/templates/admin/block user and contractor.html
+++ b/src/templates/admin/block user and contractor.html
@@ -1,49 +1,61 @@
 {% extends '/admin/layout.html' %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-md-12 m-auto">
-      <div class="container ">
-        <h2 class="text-center font-weight-bold " style="color: #632343;">Block Users And Contractors </h2>
+<div class="row">
+  <div class="col-md-12 m-auto">
+    <div class="container ">
 
-  <form class="mt-2" id="form1" name="form1" method="post" action="">
-    <div class="form-row  ">
-      <div class="form-group col-md-6">
-        <div class="ml-4">
-          <select class="mdb-select md-form btn btn-success">
-            <option value="" disabled selected>contarctor list</option>
-            <option value="1">Option 1</option>
+      <form action="/get_block_and_contractor" method="post">
 
-          </select>
-          <label>
-            <input type="submit" name="Submit" value="search" class="btn btn-primary" />
-          </label>
-        </div>
-      </div>
+        <label for="" class="   font-weight-bold">Service</label>
+        <select name="catogary" class="form-select  ">
+
+          <option value="digital Markating" style="color: #632343;">digital Markating</option>
+          <option value="Plumber" style="color: #632343;">Plumber</option>
+          <option value="Engineer" style="color: #632343;">Engineer</option>
+          <option value="Construct" style="color: #632343;">Construct</option>
+          <option value="Shop" style="color: #632343;">Shop</option>
+          <option value="Web Application Developer" style="color: #632343;">Web Application Developer</option>
+        </select>
+        <label for="" class=" ml-3  font-weight-bold mt-5">Location</label>
+        <select name="place" class="form-select  ">
+          <option value="Areecode" style="color: #632343;">Areecode</option>
+          <option value="manjeri" style="color: #632343;">manjeri</option>
+          <option value="malapuram" style="color: #632343;">malapuram</option>
+          <option value="mukkam" style="color: #632343;">mukkam</option>
+          <option value="kizisheri" style="color: #632343;">kizisheri</option>
+          <option value="kondotty" style="color: #632343;">kondotty</option>
+        </select>
+
+
+
+        <button type="submit" class="btn  btn-primary ml-5"> <span style="color: white;">Search </span></button>
+
+
+
+      </form>
+
+      <table class="table mt-5">
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Address</th>
+          <th scope="col">Phone</th>
+          <th scope="col">Services</th>
+          <th scope="col"></th>
+          <th scope="col"></th>
+        </tr>
+        {% for i in val %}
+        <tr>
+          <td>{{i[1]}} {{i[2]}}</td>
+          <td><b>place</b> : {{i[4]}} <br> <b>post</b> : {{i[5]}} <br> <b>pincode</b> : {{i[6]}}</td>
+          <td>{{i[7]}}</td>
+          <td>{{i[8]}}</td>
+          <td><a href="#" class="btn btn-danger">block</a></td>
+          <td><a href="#" class="btn btn-primary">un block</a></td>
+        </tr>
+        {% endfor %}
+      </table>
     </div>
-  </form>
-
-  <table class="table mt-5">
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Address</th>
-      <th scope="col">Phone</th>
-      <th scope="col">Services</th>
-      <th scope="col"></th>
-      <th scope="col"></th>
-    </tr>
-    {% for i in val %}
-    <tr>
-      <td>{{i[1]}}{{i[2]}}</td>
-      <td>{{i[4]}}{{i[5]}}{{i[6]}}</td>
-      <td>{{i[7]}}</td>
-      <td>{{i[8]}}</td>
-      <td><a href="#" class="btn btn-danger">block</a></td>
-      <td><a href="#" class="btn btn-primary">un block</a></td>
-    </tr>
-      {% endfor %}
-  </table>
-  </div>
 
 
-  {% endblock %}
+    {% endblock %}
