--- a/src/templates/admin/view feedback.html
+++ b/src/templates/admin/view feedback.html
@@ -4,9 +4,8 @@
   <div class="row">
     <div class="col-md-12 m-auto">
       <div class="container ">
-        <h2 class="text-center font-weight-bold " style="color: #632343;">FeedBacks </h2>
 
-  <table  class="table ">
+  <table  class="table mt-3">
     <tr>
       <th scope="col">User Details </th>
       <th scope="col">Feedback </th>
@@ -17,11 +16,11 @@
      {% for i in val %}
     <tr>
       <td>
-        {{i[1]}}{{i[2]}}<br>
-        {{i[3]}}<br>
-        {{i[6]}}
+       <b>Name : </b> {{i[1]}}{{i[2]}}<br>
+        <b>Place : </b>{{i[3]}}<br>
+       <b>Phone Number :</b> {{i[6]}}
       </td>
-      <td>&nbsp;{{i[9]}}</td>
+      <td>{{i[9]}}</td>
       <td>{{i[11]}}</td>
        <td>{{i[14]}} {{i[15]}}</td>
     </tr>
