--- a/src/templates/CONTRACTOR/view work.html
+++ b/src/templates/CONTRACTOR/view work.html
@@ -28,6 +28,7 @@
           {% else %}
           <td><a href="" class="btn btn-primary">Massege</a></td>
           {% endif %}
+          <td><td><a href="http://maps.google.com/maps?q={{i[16]}},{{i[17]}}" class="btn btn-primary">location</a></td></td>
         </tr>
         {% endfor %}
       </table>
